# bgpframe

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish-pypi.yml  release-please.yml
docs/: README.ko.md
example/: large_mrt.py  mrt_parquet.py  parquet_contains.py  parquet_filter_updates.py  parquet_polars.py  prefix_expr.py
src/: lib.rs
src/bgpframe/: __init__.py  __init__.pyi  _core.pyi  polars_utils.py  polars_utils.pyi
tests/: test_regression.py
